--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ img {
     #lezioni .row>.right {
         float: none;
         margin: auto;
+        width: 100%;
     }
     #lezioni .row img {
         width: 200px;
@@ -101,8 +102,7 @@ img {
     #why .row>.first,
     #why .row>.second,
     #why .row>.third {
-        margin: auto;
+        margin: 50px auto;
         width: 80%;
     }
-
  }
